Fixed spacing for limited edition

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@ h3 {
 .limited {
     font-weight: bold;
     font-size: 1.266rem;
+    margin-bottom: 0;
 }
 
 #sweethearts-affair {
